--- a/mail Client/public/css/client.css
+++ b/mail Client/public/css/client.css
@@ -11,11 +11,36 @@ body {
     height: 100vh;
 }
 
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    border-bottom: 1px solid #ccc;
+}
+
+.header p {
+    float: left;
+    display: block;
+    /* color: #f2f2f2; */
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    border-right: 1px solid #ccc;
+}
+
 .sidebar {
     width: 25%;
     height: 100vh;
     overflow-y: auto;
     border-right: 1px solid #ccc;
+    overflow-x: hidden;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
 }
 
 .preview-container {
